# MorningStar-connote

./: CMakeLists.txt  README.md  main.cpp  version.hpp.in
